<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="version" tools:ignore="MissingTranslation">Version %1$s (%2$d)</string>
    <string name="rate">Rate This App</string>
    <string name="about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_directions">Directions</string>
    <string name="tab_date">Date</string>
    <string name="tab_distance">Distance</string>
    <string name="menu_map">Map</string>
    <string name="menu_register">Register</string>
    <string name="about_title">About Twunch %1$s</string>
    <string name="no_twunches">No Twunches found.</string>
    <string name="register_closed">Registration for this Twunch is closed.</string>
    <string name="register_title">Register via Twitter</string>
    <string name="register_text">(%1$s) @twunch I\'ll be there! %2$s</string>
    <string name="date">%1$s at %2$s</string>
    <string name="distance_below_1km">%1$.0f m</string>
    <string name="distance_below_10km">%1$.1f km</string>
    <string name="distance_above_10km">%1$.0f km</string>
    <string name="share_title">Share Twunch via…</string>
    <string name="share_subject">Twunch</string>
    <string name="share_text">There\'s a Twunch in %1$s on %2$s at %3$s: %4$s</string>
    <string name="download_done">Twunch data is now up-to-date</string>
    <string name="download_error">There was an error downloading Twunch data. Please
		try again later.</string>
    <string name="whats_new">What\'s new?</string>

    <plurals name="numberOfParticipants">
        <item quantity="one">1 person</item>
        <item quantity="other">%d people</item>
    </plurals>

    <string name="sort">Sort</string>
    <string name="popularity">Popularity</string>
    <string name="settings">Settings</string>

    <string name="today">Today</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <plurals name="days_to_twunch">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

</resources>